# MettaOS

./: .gitignore  README.md  build.sh  lb-build.sh  run-live.sh  test-iso.sh
.github/workflows/: build.yml
apps/: Cargo.toml  build-all.sh  metta-theme.css  scaffold-app.sh
apps/_template/: index.html  package.json  vite.config.ts
apps/_template/src/: App.tsx  main.tsx
apps/_template/src-tauri/: Cargo.toml  tauri.conf.json
apps/_template/src-tauri/src/: lib.rs  main.rs
apps/metta-app-store/: index.html  package.json
apps/metta-app-store/src/: App.tsx
apps/metta-app-store/src-tauri/: Cargo.toml  tauri.conf.json
apps/metta-app-store/src-tauri/src/: lib.rs  main.rs
apps/metta-control-center/: index.html  package.json
apps/metta-control-center/src/: App.tsx
apps/metta-control-center/src-tauri/: Cargo.toml  tauri.conf.json
apps/metta-control-center/src-tauri/src/: lib.rs  main.rs
apps/metta-converter/: index.html  package.json
apps/metta-converter/src/: App.tsx
apps/metta-converter/src-tauri/: Cargo.toml  tauri.conf.json
apps/metta-converter/src-tauri/src/: lib.rs  main.rs
apps/metta-converter/src/styles/: metta-theme.css
apps/metta-core/: Cargo.toml
apps/metta-core/src/: lib.rs
apps/metta-launcher/: index.html  package.json
apps/metta-launcher/src/: App.tsx
apps/metta-launcher/src-tauri/: Cargo.toml  tauri.conf.json
apps/metta-launcher/src-tauri/src/: lib.rs  main.rs
apps/metta-netmap/: index.html  package.json
apps/metta-netmap/src/: App.tsx
apps/metta-netmap/src-tauri/: Cargo.toml  tauri.conf.json
apps/metta-netmap/src-tauri/capabilities/: default.json
apps/metta-netmap/src-tauri/src/: lib.rs  main.rs
apps/metta-notify/: index.html  package.json
apps/metta-notify/src/: App.tsx
apps/metta-notify/src-tauri/: Cargo.toml  tauri.conf.json
apps/metta-notify/src-tauri/src/: lib.rs  main.rs
apps/metta-scanner/: index.html  package.json
apps/metta-scanner/src/: App.tsx
apps/metta-scanner/src-tauri/: Cargo.toml  tauri.conf.json
apps/metta-scanner/src-tauri/src/: lib.rs  main.rs
apps/metta-updater/: index.html  package.json
apps/metta-updater/src/: App.tsx
apps/metta-updater/src-tauri/: Cargo.toml  tauri.conf.json
apps/metta-updater/src-tauri/src/: lib.rs  main.rs
apps/metta-vpn-manager/: index.html  package.json
apps/metta-vpn-manager/src/: App.tsx
apps/metta-vpn-manager/src-tauri/: Cargo.toml  tauri.conf.json
apps/metta-vpn-manager/src-tauri/src/: lib.rs  main.rs
apps/metta-welcome/: index.html  package.json
apps/metta-welcome/src/: App.tsx
apps/metta-welcome/src-tauri/: Cargo.toml  tauri.conf.json
apps/metta-welcome/src-tauri/src/: lib.rs  main.rs
apps/metta-welcome/src/styles/: metta-theme.css
assets/branding/: process_logo.py
assets/plymouth/: generate-frames.py
assets/sounds/: generate-sounds.py
assets/wallpaper/: generate_matrix_wallpaper.py
auto/: config
docker/: Dockerfile.build
docs/: METTA-2.0.md
kali-config/common/bootloaders/grub-pc/theme/: theme.txt
kali-config/common/bootloaders/syslinux_common/: live.cfg.in
kali-config/common/hooks/live/: 0090-metta-branding.chroot  0094-metta-wayland.chroot  0095-metta-compositor.chroot  0100-metta-locale.chroot  0140-metta-fonts.chroot  0150-metta-theme.chroot  0160-metta-v2-desktop.chroot  0170-metta-wine.chroot  0175-metta-bcm4364-firmware.chroot  0180-metta-calamares.chroot  0200-metta-boot.chroot  0990-metta-overrides.chroot
kali-config/common/includes.binary/.disk/: info
kali-config/common/includes.binary/isolinux/: stdmenu.cfg
kali-config/common/includes.chroot/: kali-finish-install
kali-config/common/includes.chroot/etc/: issue  issue.net  motd  os-release
kali-config/common/includes.chroot/etc/calamares/: settings.conf
kali-config/common/includes.chroot/etc/calamares/modules/: bootloader.conf  displaymanager.conf  locale.conf  users.conf  welcome.conf
kali-config/common/includes.chroot/etc/default/grub.d/: metta-theme.cfg
kali-config/common/includes.chroot/etc/lightdm/: lightdm-gtk-greeter.conf
kali-config/common/includes.chroot/etc/lightdm/lightdm.conf.d/: metta-wayland.conf
kali-config/common/includes.chroot/etc/live/config.conf.d/: metta.conf
kali-config/common/includes.chroot/etc/neofetch/: config.conf
kali-config/common/includes.chroot/etc/polkit-1/rules.d/: 50-metta-calamares.rules
kali-config/common/includes.chroot/etc/skel/: .conkyrc  .xbindkeysrc
kali-config/common/includes.chroot/etc/skel/.config/: mimeapps.list
kali-config/common/includes.chroot/etc/skel/Desktop/: Instalar METTA OS.desktop
kali-config/common/includes.chroot/etc/sudoers.d/: metta-appstore  metta-calamares  metta-scanner
kali-config/common/includes.chroot/etc/systemd/system/: metta-bcm4364-firmware.service  metta-update-check.service  metta-update-check.timer
kali-config/common/includes.chroot/etc/xdg/autostart/: metta-xfce-setup-delayed.desktop  metta-xfce-setup.desktop
kali-config/common/includes.chroot/usr/lib/metta/: app-stub.sh  install-bcm4364-firmware.sh  install-xfce-defaults.sh  metta-pkg  run-on-x11-only.sh  trust-installer-desktop.sh  update-check.sh  xfce-live-setup.sh
kali-config/common/includes.chroot/usr/share/applications/: calamares-install-metta.desktop  metta-about.desktop  metta-app-store.desktop  metta-control-center.desktop  metta-converter.desktop  metta-launcher.desktop  metta-netmap.desktop  metta-notify.desktop  (+5 more)
kali-config/common/includes.installer/: kali-finish-install  preseed.cfg
kali-config/common/package-lists/: hardware-support.list.chroot  metta.list.chroot
preview/: grub-test.cfg  lib.sh  mockup.html  preview-all.sh  preview-desktop.sh  preview-grub.sh  preview-html.sh  preview-plymouth.sh
scripts/: ci-build.sh  docker-run.sh  generate-assets.sh  generate-desktops.sh  generate-sounds.sh  imagemagick.sh  iso-build-fingerprint.sh  metta-pkg-pack.sh  ovmf-paths.sh  setup-host-arch.sh  verify-branding.sh  verify-calamares.sh  verify-metta-desktop.sh
(+39 files in other folders)
