[package]
name = "__APP_CRATE__"
version = "2.0.0"
description = "__APP_TITLE__"
edition = "2021"

[lib]
name = "__APP_CRATE___lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "__APP_ID__"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
metta-core = { path = "../../metta-core" }
