[package]
name = "metta_control_center"
version = "2.0.0"
description = "METTA Control Center"
edition = "2021"

[lib]
name = "metta_control_center_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "metta-control-center"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
metta-core = { path = "../../metta-core" }
