[package]
name = "metta_converter"
version = "2.0.0"
description = "METTA Converter"
edition = "2021"

[lib]
name = "metta_converter_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "metta-converter"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
metta-core = { path = "../../metta-core" }
