[package]
name = "metta_launcher"
version = "2.0.0"
description = "METTA Launcher"
edition = "2021"

[lib]
name = "metta_launcher_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "metta-launcher"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nucleo-matcher = "0.3"
walkdir = "2"
dirs = "5"
