[package]
name = "metta_welcome"
version = "2.0.0"
description = "METTA Welcome"
edition = "2021"

[lib]
name = "metta_welcome_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "metta-welcome"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
metta-core = { path = "../../metta-core" }
